Extract Operations class